# tg_bot_calculate_my_cost

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b1c2d3e4f5a6_simplify_drop_category_and_analytics.py  baa5b1247f5f_initial_schema.py
app/: __init__.py  main.py
app/ai/: __init__.py  analyzer.py  client.py  prompts.py  schemas.py
app/analytics/: __init__.py  insights.py  service.py
app/bot/: __init__.py  bot.py
app/charts/: __init__.py  charts.py
app/config/: __init__.py  settings.py
app/database/: __init__.py  base.py  session.py
app/handlers/: __init__.py  budgets.py  common.py  keyboards.py  reset.py  screenshots.py  stats.py
app/middlewares/: __init__.py  database.py  logging.py
app/models/: __init__.py  analytics.py  budget.py  enums.py  expense.py  user.py
app/ocr/: __init__.py  ocr_service.py
app/services/: __init__.py  budget_service.py  expense_service.py  user_service.py
app/utils/: formatting.py  logging_config.py  timeframe.py
scripts/: smoke_test.py
tests/: test_analytics.py  test_parser_and_format.py  test_reset_and_currency.py
