[project]
name = "tg-bot-calculate-my-cost"
version = "0.1.0"
description = "AI-powered Telegram bot for personal expense tracking from banking screenshots"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["B008"]  # aiogram/FastAPI-style default args are fine

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
